Update index.html to using markdown

--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
 	</head>
 	<body>
+		
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+		                <section data-markdown>
+		                    <script type="text/template">
+		                        ## Demo 1
+		                        Slide 1
+		                        ---
+		                        ## Demo 1
+		                        Slide 2
+		                        ---
+		                        ## Demo 1
+		                        Slide 3
+		                    </script>
+		                </section>
 			</div>
 		</div>
 
