fix markdown format

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
 	</head>
 	<body>
-		
 		<div class="reveal">
 			<div class="slides">
+
+		                <!-- Slides are separated by three dashes (the default) -->
 		                <section data-markdown>
 		                    <script type="text/template">
 		                        ## Demo 1
