added majority of content

--- a/index.html
+++ b/index.html
@@ -21,15 +21,58 @@
 
                 <!-- Slides are separated by three dashes (the default) -->
                 <section data-markdown>
-                    <script type="text/template">
-                        ## Demo 1
-                        Slide 1
-                        ---
-                        ## Demo 1
-                        Slide 2
-                        ---
-                        ## Demo 1
-                        Slide 3
+                    <script type="text/template">					
+## FRANZ KAFKA
+## by Woody
+---
+## Franz Kafka
+- Famous writer
+- So famous he's a word in the dictionary:
+![Kafkaesque](./dictionary.png)
+
+---
+## Kafka's Childhood
+He was born into a middle-class, German-speaking Jewish family in Prague. 
+
+He was the oldest of 6 children.
+---
+## His Father
+- Kafka wanted to be writer,
+- His overbearing father disagreed ...
+---
+## Studies
+- His father pressured him to study law
+---
+## Career 
+- He became an insurance worker.
+---
+## Interesting Facts 
+- He was a vegetarian <!-- .element: class="fragment" data-fragment-index="1" -->
+- He was engaged twice <!-- .element: class="fragment" data-fragment-index="2" -->
+- He was a atheist <!-- .element: class="fragment" data-fragment-index="3" -->
+- His grandfather was a "ritual killer" <!-- .element: class="fragment" data-fragment-index="4" -->
+
+(just kidding - a butcher) <!-- .element: class="fragment" data-fragment-index="5" -->
+![Butcher](./BillyButcher.jpeg)
+
+---
+## Death 
+Died of TB at 40 on 3 June 1924
+---
+## His works (some of his writings)
+- The Metamorphosis, 
+- The Trial, 
+- The Castle,  
+- In the Penal Colony, and 
+- The Hunger Artist
+---
+## Fame
+- He asked his friend to burn all his writings after he died
+- His friend didn't <!-- .element: class="fragment" data-fragment-index="1" -->
+- He became famous <!-- .element: class="fragment" data-fragment-index="2" -->
+
+... after he died! <!-- .element: class="fragment" data-fragment-index="3" -->
+
                     </script>
                 </section>
 
